<resources>
    <string name="app_name">MusicApp</string>
    <string name="first_slide">Âm nhạc là ma thuật đấy</string>
    <string name="second_slide">Đắm chìm vào những giai điệu nhé</string>
    <string name="third_slide">Chào mừng đến với thế giới của Walkers</string>
    <string name="description1">Bạn định nghĩa được âm nhạc chứ?</string>
    <string name="description2">Bạn đã từng tham gia vào buổi hoà nhạc chưa?</string>
    <string name="description3">Đón xem những tuyệt phẩm từ Walkers nhé</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_all_music">Tất cả nhạc</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="title_upload">Đóng góp</string>
    <string name="title_playlist">Danh sách</string>

</resources>